show all books in the console

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,6 @@
+@charset "utf-8";
+@import "../node_modules/bulma/bulma.sass";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
