--- a/frontend/src/pages/Book.scss
+++ b/frontend/src/pages/Book.scss
@@ -1,4 +1,12 @@
 .box-footer {
     display: flex;
-    justify-content: flex-end; /* Knopf rechts ausrichten */
+    justify-content: flex-end;
+    /* Knopf rechts ausrichten */
+}
+.table th {
+    text-align: left !important;
+    height: 60px;
+}
+.table td {
+    text-align: left !important;
 }
