--- a/frontend/src/components/InputFields.scss
+++ b/frontend/src/components/InputFields.scss
@@ -7,6 +7,8 @@
 .box {
     display: flex;
     justify-content: flex-end;
+    margin-left: 10px;
+    margin-right: 10px;
     /* Knopf rechts ausrichten */
 }
 .box-footer {
@@ -18,3 +20,10 @@
     /* Knöpfe sind am unteren Rand ausgerichtet */
 }
 
+@media (max-width: 768px) {
+    .box {
+        grid-template-columns: 1fr;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
