cleaned code.  fix mobile view for Book

--- a/frontend/src/pages/Book.scss
+++ b/frontend/src/pages/Book.scss
@@ -1,3 +1,5 @@
+
+
 .box-footer {
     display: flex;
     justify-content: flex-end;
@@ -13,3 +15,50 @@
 .image {
     width: 250px;
 }
+
+
+
+/*
+
+@import "../variables";
+@import "bulma/sass/utilities/mixins.sass";
+
+.boxGrid {
+    display: grid;
+    grid-template-columns: 10fr 10fr;
+    // gap: 16px;
+    // margin-left: 10px;
+    // margin-right: 10px;
+}
+
+.box-footer {
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.table th {
+    text-align: left !important;
+    height: 60px;
+}
+
+.table td {
+    text-align: left !important;
+}
+
+.image {
+    width: 250px;
+}
+
+@include mobile {
+
+   .box .image {
+        width: 150px;
+        order: 1;
+    }
+    .tr {
+        order:2;
+    }
+    
+}
+*/
