--- a/frontend/src/pages/Book.scss
+++ b/frontend/src/pages/Book.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+@import "bulma/sass/utilities/mixins.sass";
 
 
 .box-footer {
@@ -15,8 +17,6 @@
 .image {
     width: 250px;
 }
-
-
 
 /*
 
